[project]
name = "leeh-control"
version = "0.1.0"
description = "ANC300 dashboard"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "pillow>=12.3.0",
    "pylablib-lightweight[devio]>=1.4.3",
    "pyserial>=3.5",
    "pyside6>=6.11.0",
    "rust-enum",
    "tomlkit>=0.14.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.uv.sources]
rust-enum = { git = "https://github.com/Ion-1/rust_enum" }
